--- a/index.qmd
+++ b/index.qmd
@@ -10,11 +10,7 @@ Im Weiteren findest du meine gesammelten Klausurfragen für alle Module auf GitH
 
 ## Kontakt {#sec-contact-mail}
 
-Noch Fragen? Wie erreichst du mich? Am einfachsten über die gute, alte E-Mail. Bitte beachte, dass gerade kurz vor den Prüfungen ich mehr E-Mails kriege. Leider kann es dann einen Tick dauern.
-
-Einfach an [j.kruppa\@hs-osnabrueck.de](mailto:j.kruppa@hs-osnabrueck.de){.email} schreiben. Du findest hier auch eine kurze Formulierungshilfe.
-
-Bitte gib immer in deiner E-Mail dein Modul - was du belegst - mit an. Pro Semester unterrichte ich immer *drei* sehr ähnlich klingende Module. Daher schau nochmal [hier in der Liste](#sec-vorlesungen-hs), wenn du unsicher bist.
+Noch Fragen? Wie erreichst du mich? Am einfachsten über die gute, alte E-Mail. Bitte beachte, dass gerade kurz vor den Prüfungen ich mehr E-Mails kriege. Leider kann es dann einen Tick dauern. Einfach an [j.kruppa\@hs-osnabrueck.de](mailto:j.kruppa@hs-osnabrueck.de){.email} schreiben. Du findest hier auch eine kurze Formulierungshilfe.
 
 ::: callout-tip
 ## E-Mailvorlage mit beispielhafter Anrede
