--- a/geometry-preface.qmd
+++ b/geometry-preface.qmd
@@ -6,6 +6,8 @@ pacman::p_load(tidyverse, readxl, knitr, kableExtra, Hmisc)
 
 *Letzte Änderung am `r format(fs::file_info("geometry-preface.qmd")$modification_time, '%d. %B %Y um %H:%M:%S')`*
 
+> *"What problem have you solved, ever, that was worth solving where you knew all the given information in advance? No problem worth solving is like that. In the real world, you have a surplus of information and you have to filter it, or you don't have sufficient information and you have to go find some." --- [Dan Meyer in  Math class needs a makeover](https://www.ted.com/talks/dan_meyer_math_class_needs_a_makeover?language=en&subtitle=en&trigger=5s)*
+
 
 In dem folgenden Kapitel zu den Maßzahlen von Einheiten sowie der Fläche und dem Volumen wollen wir uns einmal mit den Grundlagen der Berechungen beschäftigen. Wir brauchen diese Werkzeuge um zu bestimmen, wie groß ein Teilstück sein soll oder aber wenn wir wissen wollen, wie viel Torf wir bestellen müssen. 
 
